# fisher-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Readme.md  data.csv  rustfmt.toml
.github/workflows/: ci.yml
docs/: .rustc_info.json  .rustdoc_fingerprint.json  package.json  tailwind.config.js
docs/debug/.fingerprint/fisher-dd45cbf0feb9770f/: doc-lib-fisher  doc-lib-fisher.json  output-doc-lib-fisher
docs/debug/.fingerprint/proc-macro2-052f6956eedda3b5/: lib-proc-macro2  lib-proc-macro2.json
docs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/doc/fisher/: all.html  index.html  macro.is_num.html  sidebar-items.js
docs/doc/fisher/errors/: enum.Error.html  (+1 more)
docs/doc/syn/: all.html  enum.BinOp.html  enum.Expr.html  enum.Fields.html  enum.GenericArgument.html  enum.GenericParam.html  enum.Lit.html  enum.Member.html  enum.Meta.html  enum.PathArguments.html  enum.Type.html  enum.TypeParamBound.html  fn.parse.html  fn.parse2.html  fn.parse_str.html  index.html  macro.braced.html  macro.bracketed.html  macro.parenthesized.html  macro.parse_quote.html  struct.AngleBracketedGenericArguments.html  struct.AssocConst.html  struct.AssocType.html  struct.Constraint.html  struct.DeriveInput.html  struct.Error.html  struct.ExprArray.html  struct.ExprAssign.html  struct.ExprAsync.html  struct.ExprAwait.html  struct.ExprBinary.html  struct.ExprBlock.html  struct.ExprBreak.html  struct.ExprCall.html  struct.ExprCast.html  struct.ExprClosure.html  struct.ExprConst.html  struct.ExprContinue.html  struct.ExprField.html  struct.ExprForLoop.html  (+42 more)
examples/: csv.rs
src/: errors.rs  lib.rs  prelude.rs
src/dataframe/: mod.rs
src/math/stat/: mod.rs
src/series/: float_series.rs  int_series.rs  mod.rs  num_series.rs  str_series.rs
(+271 files in other folders)
