[package]
name = "fisher"
version = "0.1.0"
edition = "2021"
# author = ["Syed Vilayat Ali Rizvi <vilayatcodemysite@gmail.com>"]
categories = []
description = "A fast, powerful, flexible and easy to use open source data analysis and manipulation tool written in Rust"
license = "MIT"
keywords = []
homepage = ""
documentation = ""
repository = "https://www.github.com/vilayat-ali/fisher"
readme = "Readme.md"
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"], optional = true }

[features]
csv = []
json = []
serde = ["dep:serde"]
all = ["csv", "json"]
